s1_bnf.txt
program: (block)*
block: func | ife | ifne | whilee | whilene | statement_list
func: FID LBR formparams RBR LCBR func_statement_list RCBR
ife: IFE LBR actvar RBR LCBR statement_list RCBR
ifne: IFNE LBR actvar RBR LCBR statement_list RCBR
whilee: WHIE LBR actvar RBR LCBR statement_list RCBR
whilene: WHINE LBR actvar RBR LCBR statement_list RCBR
formparams: (formvar COMMA)* formvar | EMP
actvar: ACTVID
formvar: FORMVID
func_statement_list: (func_statement | statement)*
statement_list: (statement)*
func_statement: statement | RET expr COMMA
statement: assign SEMICOL | funcall SEMICOL | LCOMM COMMENT RCOMM | EMP
assign: var ASSIGN expr
funcall: FID LBR actparams RBR
actparams: (expr COMMA)* expr | EMP
expr: (expr | term) (UNION | INTER | DIFF | SYMDIFF) (expr | term)
term: funcall | actvar | set | LBR expr RBR
set: LSBR actparams RSBR



FID - function name
LBR and RBR - round brackets ( and )
LCBR and RCBR - curly brackets { and }
LCOMM and RCOMM - /* and */
LSBR and RSBR - square brackets [ and ]
IFE - "ife"
IFNE - "ifne"
WHIE - "whilee"
WHINE - "whilene"
RET - "return"
COMMA - comma ,
SEMICOL - semicolon ;
EMP - empty
ACTVID and FORMVID - names of actual and formal variables
ASSIGN - equality sign =
UNION, INTER, DIFF and SYMDIFF - union sign +, intersection sign *, difference sign -, and symmetric difference sign ~
